--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
   <div id="loader">
     <img src="css/img/logo_original_sin_fondo.png" class="galope">
   </div>
-    <div class="mensaje error" id="errorMsg">Usuario o clave incorrecta</div>
+    <div class="mensaje error" id="errorMsg" style="display:none;">Usuario o clave incorrecta</div>
   </div>
 
   <script type="module">
