ajustes menu hamburguesa

--- a/public/admin.html
+++ b/public/admin.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/admin.css">
   <title>Admin - Sumar Cafecito</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Syncopate&display=swap" rel="stylesheet"> <!-- Tipografías personalizadas --> <!--//Agrego para uso de letra -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NXMC00DZ81"></script>
@@ -19,47 +20,6 @@
 </head>
 <body>
   <style>
-    .menu-hamburguesa {
-      position: relative;
-      display: block;
-      margin-bottom: 20px;
-      text-align: left;
-    }
-    .menu-icon {
-      cursor: pointer;
-      display: inline-block;
-      padding: 10px 16px;
-      background-color: #d86634;
-      color: white;
-      border-radius: 6px;
-      font-weight: bold;
-      margin-left: 10px;
-    }
-    #menu-toggle {
-      display: none;
-    }
-    .menu-links {
-      display: none;
-      position: absolute;
-      background-color: white;
-      border: 1px solid #ccc;
-      list-style: none;
-      padding: 10px;
-      margin: 5px 0 0 0;
-      border-radius: 8px;
-      z-index: 999;
-    }
-    #menu-toggle:checked + .menu-icon + .menu-links {
-      display: block;
-    }
-    .menu-links li {
-      margin-bottom: 8px;
-    }
-    .menu-links li a {
-      text-decoration: none;
-      color: #d86634;
-      font-weight: bold;
-    }
     .btn-estadisticas {
       background-color: white;
       color: #d86634;
@@ -209,13 +169,40 @@
         window.location.href = "login.html";
       } else {
         try {
-          const ref = doc(db, "admin", user.uid);
+          const ref = doc(db, "usuarios", user.uid);
           const snap = await getDoc(ref);
           const nombre = snap.exists() ? (snap.data().nombre || user.email) : user.email;
           document.getElementById("usuarioLogueado").innerText = nombre;
-          if (snap.exists() && snap.data().rol === "dueño") {
-            document.getElementById("botonEstadisticas").style.display = "block";
+          // Definir niveles de rol
+          const rol = snap.exists() ? (snap.data().rol || "empleado") : "empleado";
+          if (rol === "dueño" || rol === "dev") {
+            document.getElementById("botonEstadisticas")?.style && (document.getElementById("botonEstadisticas").style.display = "block");
           }
+
+          // Construcción dinámica del menú según rol
+          const links = [];
+          if (rol === "dev" || rol === "dueño") {
+            links.push({ href: "registro-admin.html", text: "Registrar Admin" });
+            links.push({ href: "menu-upload.html", text: "Subir Menú" });
+            links.push({ href: "panel.html", text: "Estadísticas" });
+            links.push({ href: "filtros.html", text: "Detalle logs" });
+            links.push({ href: "usuarios.html", text: "Gestión de usuarios" }); // nuevo html a crear
+          } else if (rol === "encargado") {
+            links.push({ href: "panel.html", text: "Estadísticas" });
+          }
+          const menuLinks = document.getElementById("menuLinks");
+          if (menuLinks) {
+            menuLinks.innerHTML = "";
+            links.forEach(link => {
+              const li = document.createElement("li");
+              const a = document.createElement("a");
+              a.href = link.href;
+              a.textContent = link.text;
+              li.appendChild(a);
+              menuLinks.appendChild(li);
+            });
+          }
+
           const ahora = Date.now();
           localStorage.setItem("loginTimestamp", ahora.toString());
           localStorage.setItem("ultimoEvento", ahora.toString());
@@ -269,12 +256,7 @@
     <nav class="menu-hamburguesa">
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle" class="menu-icon">☰</label>
-      <ul class="menu-links">
-        <li><a href="registro-admin.html">Registrar Admin</a></li>
-        <li><a href="menu-upload.html">Subir Menú</a></li>
-        <li><a href="panel.html">Estadísticas</a></li>
-        <li><a href="filtros.html">Detalle logs</a></li>
-      </ul>
+      <ul class="menu-links" id="menuLinks"></ul>
     </nav>
     <div class="info-usuario">
       Usuario logueado: <span id="usuarioLogueado">-</span>
@@ -546,6 +528,17 @@
     loader.style.display = "none";
     input.disabled = false;
     button.disabled = false;
+  });
+</script>
+</script>
+<script>
+  document.addEventListener('click', function(event) {
+    const toggle = document.getElementById('menu-toggle');
+    const menu = document.querySelector('.menu-hamburguesa');
+
+    if (toggle.checked && !menu.contains(event.target) && event.target !== document.querySelector('label[for="menu-toggle"]')) {
+      toggle.checked = false;
+    }
   });
 </script>
 </body>
