--- a/public/registro.html
+++ b/public/registro.html
@@ -17,12 +17,29 @@
 <link rel="stylesheet" href="css/components/messages.css" />
 <link rel="stylesheet" href="css/components/loader.css" />
 <link rel="stylesheet" href="css/components/footer.css" />
+<style>
+  .pasaporte-toggle {
+    display: flex;
+    align-items: center;
+  }
+  .pasaporte-toggle label {
+    margin-left: 0.5em;
+    font-family: 'Playfair Display', serif;
+    font-size: 0.9em;
+  }
+</style>
 </head>
 <body>
   <div class="menu-style">
   <img src="css/img/logo_color_secundario_2.png" alt="Dársena Café" class="logo" />
   <form id="registroForm" data-gtm-form-interact-id="0">
-    <input type="tel" name="dni" id="dni" placeholder="DNI" aria-label="Número de DNI" inputmode="numeric" pattern="[0-9]{7,8}" maxlength="8" required title="Debe tener entre 7 y 8 números">
+    <div style="display: flex; align-items: center; gap: 0.5em;">
+      <select id="tipoDocumento" name="tipoDocumento" class="input-like">
+        <option value="DNI" selected>DNI</option>
+        <option value="PA">PA</option>
+      </select>
+      <input type="text" name="dni" id="dni" placeholder="DNI" aria-label="Número de documento" required style="flex: 1;" pattern="[0-9]{7,8}" inputmode="numeric" maxlength="8">
+    </div>
     <input type="text" name="nombre" placeholder="Nombre y apellido" aria-label="Nombre y apellido" required pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+$" title="Sólo letras y espacios">
     <input type="email" name="mail" placeholder="Correo electrónico" aria-label="Correo electrónico" required="" pattern="^[^\s@]+@[^\s@]+\.[^\s@]+$">
     <p>¿Cuándo es tu cumpleaños?</p>
@@ -83,6 +100,24 @@
     const dniParam = params.get("dni");
     if (dniParam) document.querySelector('input[name="dni"]').value = dniParam;
 
+    const dniInput = document.getElementById("dni");
+    const tipoDocumento = document.getElementById("tipoDocumento");
+    tipoDocumento.addEventListener("change", () => {
+      if (tipoDocumento.value === "PA") {
+        dniInput.removeAttribute("pattern");
+        dniInput.removeAttribute("maxlength");
+        dniInput.setAttribute("inputmode", "text");
+        dniInput.setAttribute("placeholder", "Pasaporte");
+        dniInput.style.textTransform = "uppercase";
+      } else {
+        dniInput.setAttribute("pattern", "[0-9]{7,8}");
+        dniInput.setAttribute("maxlength", "8");
+        dniInput.setAttribute("inputmode", "numeric");
+        dniInput.setAttribute("placeholder", "DNI");
+        dniInput.style.textTransform = "none";
+      }
+    });
+
     document.getElementById("registroForm").addEventListener("submit", async function(e) {
       e.preventDefault();
 
@@ -93,7 +128,7 @@
       const cumple_dia = parseInt(form.cumple_dia.value);
       const cumple_mes = parseInt(form.cumple_mes.value);
 
-      if (!/^\d{7,8}$/.test(dni)) {
+      if (tipoDocumento.value === "DNI" && !/^\d{7,8}$/.test(dni)) {
         document.getElementById("mensaje").innerText = "El DNI debe tener entre 7 y 8 números.";
         document.getElementById("mensaje-container").style.display = "block";
         document.getElementById("volverBtn").addEventListener("click", () => {
