--- a/public/login.html
+++ b/public/login.html
@@ -37,6 +37,13 @@
   </div>
 
   <script type="module">
+    import { firebaseConfig } from './js/firebase-config.js';
+    import { auth } from './js/firebase-auth.js';
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+    const app = initializeApp(firebaseConfig);
+
     document.getElementById("loginForm").addEventListener("submit", async function(e) {
       e.preventDefault();
       const usuario = document.getElementById("usuario").value.trim();
@@ -46,27 +53,18 @@
       document.getElementById("errorMsg").style.display = "none";
 
       try {
-        const res = await fetch("https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/apiCliente/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ usuario, clave })
-        });
+        const userCredential = await signInWithEmailAndPassword(auth, usuario, clave);
+        const user = userCredential.user;
 
-        const data = await res.json();
+        localStorage.setItem("admin", "true");
+        localStorage.setItem("usuario", usuario);
+        sessionStorage.setItem("logueado", "true");
 
-        if (data.status === "ok") {
-          localStorage.setItem("admin", "true");
-          localStorage.setItem("usuario", usuario);
-          sessionStorage.setItem("logueado", "true");
-
-          if (typeof gtag === 'function') {
-            gtag('event', 'admin_login');
-          }
-
-          window.location.href = "admin.html";
-        } else {
-          throw new Error("Credenciales inválidas");
+        if (typeof gtag === 'function') {
+          gtag('event', 'admin_login');
         }
+
+        window.location.href = "admin.html";
       } catch (error) {
         console.error("Error en login:", error);
         document.getElementById("loader").style.display = "none";
