--- a/public/menu-upload.html
+++ b/public/menu-upload.html
@@ -6,6 +6,100 @@
   <meta name="robots" content="noindex, nofollow">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <title>Subida Menú</title>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
+    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+    import { getStorage, ref, uploadBytes, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js';
+    import { getFirestore, collection, addDoc, serverTimestamp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
+    import { firebaseConfig } from './js/firebase-config.js';
+    import * as pdfjsLib from '/pdfjs/build/pdf.js';
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const storage = getStorage(app);
+    const db = getFirestore(app);
+
+    pdfjsLib.GlobalWorkerOptions.workerSrc = '/pdfjs/build/pdf.worker.js';
+
+    const menuForm = document.getElementById('menuForm');
+    const mensaje = document.getElementById('mensaje');
+
+    document.getElementById('menuFile').addEventListener('change', (e) => {
+      const fileName = e.target.files.length > 0 ? e.target.files[0].name : 'Ningún archivo seleccionado';
+      document.getElementById('archivoNombre').textContent = fileName;
+    });
+
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        window.location.href = "login.html";
+        return;
+      }
+      await user.getIdToken(true);
+    });
+
+    menuForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      if (!auth.currentUser) {
+        mensaje.textContent = "⚠️ Error: sesión expirada. Volvé a iniciar sesión.";
+        return;
+      }
+
+      document.getElementById("loader").style.display = "block";
+
+      const file = document.getElementById('menuFile').files[0];
+      const normalizedName = file ? file.name.normalize("NFC") : '';
+      if (!file || normalizedName !== 'Dársena Menú.pdf') {
+        mensaje.textContent = "El archivo debe llamarse exactamente 'Dársena Menú.pdf'";
+        document.getElementById("loader").style.display = "none";
+        return;
+      }
+
+      try {
+        const storageRef = ref(storage, 'menu.pdf');
+        await uploadBytes(storageRef, file);
+
+        await convertirPdfAYSubirImagenes(file);
+
+        await addDoc(collection(db, 'logs'), {
+          usuario: auth.currentUser.email,
+          accion: 'admin_subida_menu',
+          detalles: 'se sube nuevo menú',
+          timestamp: serverTimestamp()
+        });
+
+        mensaje.textContent = "✅ Menú subido correctamente.";
+        menuForm.reset();
+        document.getElementById('archivoNombre').textContent = "Ningún archivo seleccionado";
+      } catch (error) {
+        console.error("Error al subir:", error);
+        mensaje.textContent = "⚠️ Error al subir el menú.";
+      } finally {
+        document.getElementById("loader").style.display = "none";
+      }
+    });
+
+    async function convertirPdfAYSubirImagenes(pdfFile) {
+      const arrayBuffer = await pdfFile.arrayBuffer();
+      const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
+
+      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+        const page = await pdf.getPage(pageNum);
+        const viewport = page.getViewport({ scale: 2 });
+
+        const canvas = document.createElement('canvas');
+        const context = canvas.getContext('2d');
+        canvas.height = viewport.height;
+        canvas.width = viewport.width;
+
+        await page.render({ canvasContext: context, viewport }).promise;
+
+        const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/jpeg', 1.0));
+        const storageRef = ref(storage, `menu-img/pagina-${pageNum}.jpg`);
+        await uploadBytes(storageRef, blob);
+      }
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Syncopate&display=swap" rel="stylesheet"> <!-- Tipografías personalizadas --> <!--//Agrego para uso de letra -->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/layout.css" />
@@ -108,51 +202,5 @@
     </div>
   </div>
 
-  <script>
-document.getElementById('menuFile').addEventListener('change', (e) => {
-  const fileName = e.target.files.length > 0 ? e.target.files[0].name : 'Ningún archivo seleccionado';
-  document.getElementById('archivoNombre').textContent = fileName;
-});
-
-document.getElementById('menuForm').addEventListener('submit', async (e) => {
-  e.preventDefault();
-  const mensaje = document.getElementById("mensaje");
-  const fileInput = document.getElementById("menuFile");
-  const file = fileInput.files[0];
-  const loader = document.getElementById("loader");
-
-  if (!file || file.name.normalize("NFC") !== "Dársena Menú.pdf") {
-    mensaje.textContent = "⚠️ El archivo debe llamarse exactamente 'Dársena Menú.pdf'";
-    return;
-  }
-
-  const formData = new FormData();
-  formData.append("file", file);
-
-  loader.style.display = "block";
-  mensaje.textContent = "";
-
-  try {
-    const response = await fetch("https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/uploadMenuToGitHub", {
-      method: "POST",
-      body: formData,
-    });
-
-    const data = await response.json();
-    if (data.status === "ok") {
-      mensaje.textContent = "✅ Menú subido correctamente.";
-      fileInput.value = "";
-      document.getElementById("archivoNombre").textContent = "Ningún archivo seleccionado";
-    } else {
-      mensaje.textContent = "⚠️ Hubo un error al subir el menú.";
-    }
-  } catch (err) {
-    console.error(err);
-    mensaje.textContent = "⚠️ Error al subir el menú.";
-  } finally {
-    loader.style.display = "none";
-  }
-});
-  </script>
 </body>
 </html>
