--- a/public/admin.html
+++ b/public/admin.html
@@ -295,18 +295,108 @@
     <a href="login.html">Volver a ingresar</a>
   </div>
 <script type="module">
+    import { auth, onAuthStateChanged } from './js/firebase-auth.js';
+    import { getFirestore, doc, getDoc, collection, addDoc } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
+    const db = getFirestore();
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        window.location.href = "login.html";
+      } else {
+        try {
+          const ref = doc(db, "usuarios", user.uid);
+          const snap = await getDoc(ref);
+          const nombre = snap.exists() ? (snap.data().nombre || user.email) : user.email;
+          document.getElementById("usuarioLogueado").innerText = nombre;
+          // Definir niveles de rol
+          const rol = snap.exists() ? (snap.data().rol || "empleado") : "empleado";
+          if (rol === "dueño" || rol === "dev") {
+            document.getElementById("botonEstadisticas")?.style && (document.getElementById("botonEstadisticas").style.display = "block");
+          }
+
+          // Construcción dinámica del menú según rol
+          const links = [];
+          if (rol === "dev" || rol === "dueño") {
+            links.push({ href: "registro-admin.html", text: "Registrar Admin" });
+            links.push({ href: "menu-upload.html", text: "Subir Menú" });
+            links.push({ href: "panel.html", text: "Estadísticas" });
+            links.push({ href: "filtros.html", text: "Detalle logs" });
+            links.push({ href: "usuarios.html", text: "Gestión de usuarios" }); // nuevo html a crear
+          } else if (rol === "encargado") {
+            links.push({ href: "panel.html", text: "Estadísticas" });
+          }
+          const menuLinks = document.getElementById("menuLinks");
+          if (menuLinks) {
+            menuLinks.innerHTML = "";
+            links.forEach(link => {
+              const li = document.createElement("li");
+              const a = document.createElement("a");
+              a.href = link.href;
+              a.textContent = link.text;
+              li.appendChild(a);
+              menuLinks.appendChild(li);
+            });
+          }
+
+          const ahora = Date.now();
+          localStorage.setItem("loginTimestamp", ahora.toString());
+          localStorage.setItem("ultimoEvento", ahora.toString());
+          ["click", "keydown", "mousemove", "scroll", "touchstart"].forEach(evento => {
+            document.addEventListener(evento, () => {
+              localStorage.setItem("ultimoEvento", Date.now().toString());
+            });
+          });
+          setInterval(async () => {
+            const tsLogin = parseInt(localStorage.getItem("loginTimestamp") || "0");
+            const tsUltimoEvento = parseInt(localStorage.getItem("ultimoEvento") || "0");
+            const ahora = Date.now();
+            const INACTIVIDAD_MAX_MS = 3000 * 60 * 1000;
+            const SESION_MAX_MS = 3000 * 60 * 1000;
+            const usuario = auth.currentUser?.email || "admin";
+            if (ahora - tsLogin > SESION_MAX_MS) {
+              await addDoc(collection(db, "logs"), {
+                usuario,
+                accion: "admin_max_cerrar_sesion",
+                detalles: "Se cerró la sesión por máximo de tiempo abierto",
+                timestamp: new Date()
+              });
+              mostrarMensajeSesionExpirada("Se cerró tu sesión por tiempo máximo abierta.");
+            } else if (ahora - tsUltimoEvento > INACTIVIDAD_MAX_MS) {
+              await addDoc(collection(db, "logs"), {
+                usuario,
+                accion: "admin_inact_cerrar_sesion",
+                detalles: "Se cerró la sesión por inactividad",
+                timestamp: new Date()
+              });
+              mostrarMensajeSesionExpirada("Se cerró tu sesión por inactividad.");
+            }
+          }, 60 * 1000);
+        } catch (error) {
+          console.error("Error al obtener datos del usuario:", error);
+        }
+      }
+    });
+
+    function mostrarMensajeSesionExpirada(mensaje) {
+      document.querySelector(".menu-style").style.display = "none";
+      const cartel = document.getElementById("sesion-expirada");
+      cartel.querySelector("p").textContent = mensaje;
+      cartel.style.display = "block";
+      localStorage.clear();
+      auth.signOut();
+    }
+  // --- MOVIDO DESDE SEGUNDO <script type="module"> ---
   import { apiCliente, apiLog, apiCafe, apiMailFelicitaciones } from './js/cliente.js';
-  import { auth, signOut } from './js/firebase-auth.js';
+  import { auth as auth2, signOut } from './js/firebase-auth.js';
 
   async function cerrarSesion() {
-    const usuario = auth.currentUser?.email || "admin";
+    const usuario = auth2.currentUser?.email || "admin";
     await apiLog.registrar({
       usuario,
       accion: "cerrar_sesion",
       detalles: "Cierre de sesión",
       timestamp: new Date()
     });
-    await signOut(auth);
+    await signOut(auth2);
     localStorage.clear();
     window.location.href = "login.html";
   }
@@ -347,7 +437,7 @@
     const div = document.getElementById("respuesta");
     const loader = document.getElementById("loader");
     let btnInsta = document.getElementById("btnInstagram");
-    const usuario = auth.currentUser?.email || "admin";
+    const usuario = auth2.currentUser?.email || "admin";
 
     div.innerHTML = "";
     loader.style.display = "block";
