--- a/public/admin.html
+++ b/public/admin.html
@@ -402,7 +402,9 @@
   }
   window.cerrarSesion = cerrarSesion;
 
-  document.getElementById("cerrarSesionLink")?.addEventListener("click", cerrarSesion);
+  window.addEventListener('DOMContentLoaded', () => {
+    document.getElementById("cerrarSesionLink")?.addEventListener("click", cerrarSesion);
+  });
 
   // Listener para el botón "Consultar cliente"
   document.getElementById("consultarCliente").addEventListener("click", async () => {
